@@ -5,6 +5,9 @@ ChangeLog
 
 SVN TRUNK
 
+- Fully alias-free/band-limited wavetable oscillators are now
+  in place, making it a better virtual-analog synthesizer (esp.
+  for running sample-rates below 96KHz). (EXPERIMENTAL)
 - Late optimizations to basic wave-table oscillators.
 - Make sure the LV2 plugin back-end always builds first, before
   its respective LV2 UI front-end client.
